Fix: image overflow

--- a/app/components/ImageGallary.module.scss
+++ b/app/components/ImageGallary.module.scss
@@ -5,12 +5,21 @@
 
   .mainImage {
     width: 100%;
-    max-width: 500px;
+    max-width: 500px; /* Limit the main image width */
+    height: 300px; /* Fixed height for the main image */
     margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Crop any overflowed image */
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
     img {
-      border: 2px solid #ddd;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
